# cortex-skill-codebase-security-scan

./: .gitignore  SKILL.md  action.yml  pyproject.toml
github/: run-cortex-skill.yml  security-scan.yml
scripts/: scan.py
